# etl_bootcamp

./: base_etl.py  con.py  connection.py  constants.py  helpers.py  main.py  old.py  pyproject.toml
core/: base_etl.py  constants.py
ddl/: STG.sql  TGT.sql  TMP.sql  schema.sql  stg.sql  tgt.sql  tmp.sql
ddl_tables/: CATEGORY.sql  COUNTRY.sql  CUSTOMER.sql  PRODUCT.sql  REGION.sql  STORE.sql  SUBCATEGORY.sql
etl/: __init__.py  category.py  country.py  customer.py  product.py  region.py  sales.py  store.py  subcategory.py
